// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en nuestro componente PADRE <GifExpert App /> Debe mostrar correctamente el componente (Snapshot)  1`] = `
<Fragment>
  <h2>
    GifExpertApp (buscador de gif's) 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en nuestro componente PADRE <GifExpert App /> Debe mostrar una lista de Categorias  1`] = `
<Fragment>
  <h2>
    GifExpertApp (buscador de gif's) 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Pepe"
      key="Pepe"
    />
    <GifGrid
      category="Gamer"
      key="Gamer"
    />
  </ol>
</Fragment>
`;
